Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -785,6 +785,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "\n",
+    "sns.set(style=\"white\")\n",
+    "\n",
+    "\n",
+    "# Compute the correlation matrix\n",
+    "corr = features_poly.corr()\n",
+    "\n",
+    "# Generate a mask for the upper triangle\n",
+    "mask = np.zeros_like(corr, dtype=np.bool)\n",
+    "mask[np.triu_indices_from(mask)] = True\n",
+    "\n",
+    "# Set up the matplotlib figure\n",
+    "f, ax = plt.subplots(figsize=(11, 9))\n",
+    "\n",
+    "# Generate a custom diverging colormap\n",
+    "cmap = sns.diverging_palette(220, 10, as_cmap=True)\n",
+    "\n",
+    "# Draw the heatmap with the mask and correct aspect ratio\n",
+    "plt.title(\"Polynomials Correlation Heatmap\", fontsize = 30, color = \"#F97E77\")\n",
+    "sns.heatmap(corr, mask=mask, cmap=cmap, vmax=.3, center=0,\n",
+    "            square=True, linewidths=.5, cbar_kws={\"shrink\": .5})"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
