Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -803,7 +803,8 @@
    ],
    "source": [
     "import seaborn as sns\n",
-    "import \n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "sns.set(style=\"white\")\n",
     "\n",
