--- a/index.ipynb
+++ b/index.ipynb
@@ -804,7 +804,7 @@
    "source": [
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "%matplotlib inline\n",
     "\n",
     "sns.set(style=\"white\")\n",
     "\n",
