Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -838,6 +838,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create correlation matrix\n",
+    "corr_matrix = features_poly.corr().abs()\n",
+    "\n",
+    "# Select upper triangle of correlation matrix\n",
+    "upper = corr_matrix.where(np.triu(np.ones(corr_matrix.shape), k=1).astype(np.bool))\n",
+    "\n",
+    "# Find index of feature columns with correlation greater than 0.95\n",
+    "to_drop = [column for column in upper.columns if any(upper[column] > 0.95)]\n",
+    "\n",
+    "#Drop variables from table\n",
+    "X_poly.drop(columns=to_drop, inplace=True)\n",
+    "X_poly.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
